--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             📋 Check My Booking
         </div>
         <div class="top-bar-item">
-            <a href="/Account/Register">🔐 Login / Sign Up</a>
+            <a href="/Account/Login">🔐 Login </a>/<a href="/Account/Register"> Sign Up</a>
         </div>
     </div>
 
