--- a/TranspoLink/Views/Account/Register.cshtml
+++ b/TranspoLink/Views/Account/Register.cshtml
@@ -5,17 +5,6 @@
 
 
 @section head {
-   @*  <style>
-        /* Override main padding for auth pages */
-        body > main {
-            padding: 0 !important;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            min-height: calc(100vh - 120px);
-            background: #f5f7fa;
-        }
-    </style> *@
     <link rel="stylesheet" href="/css/login.css" />
     <script src="/js/regNlog.js" defer></script>
 }
@@ -115,7 +104,7 @@
             <!-- Photo Upload -->
             <div class="auth-photo-upload">
                 <label class="auth-photo-label">
-                    Profile Photo (Optional)
+                    Profile Photo
                 </label>
                 <label class="upload auth-upload">
                     <input asp-for="Photo" accept="image/jpeg,image/png" hidden>
