--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -27,8 +27,8 @@
 
     <nav>
         <div class="logo">
-            <img src="/images/shortcut_icon.png" alt="TranspoLink Logo" style="width:50px; height:50px;" />
-            <span>TranspoLink</span>
+            <a href="/Home/Index"><img src="/images/shortcut_icon.png" alt="TranspoLink Logo" style="width:50px; height:50px;" /></a>
+            <a href="/Home/Index"><span>TranspoLink</span></a>
         </div>
         <ul class="nav-links">
             <li><a href="/">Home</a></li>
