--- a/TranspoLink/wwwroot/css/app.css
+++ b/TranspoLink/wwwroot/css/app.css
@@ -102,7 +102,7 @@ nav {
     display: flex;
     align-items: center;
     gap: 12px;
-    font-size: 24px;
+    font-size: 26px;
     font-weight: bold;
     color: #0f1b3d;
     flex: 1;
@@ -110,6 +110,11 @@ nav {
 
     .logo img {
         border-radius: 8px;
+    }
+
+    .logo a{
+        color: inherit;
+        text-decoration: none;
     }
 
 .nav-links {
