--- a/TranspoLink/Views/Admin/Index.cshtml
+++ b/TranspoLink/Views/Admin/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@{
+﻿@model IEnumerable<Booking>
+
+@{
     ViewBag.Title += " |Admin Dashboard";
 }
 
-@section header{
+@section head{
     <link rel="stylesheet" href="/css/admin.css" />
 }
 <div class="admin-container">
