--- a/TranspoLink/Views/_ViewImports.cshtml
+++ b/TranspoLink/Views/_ViewImports.cshtml
@@ -1,1 +1,3 @@
-﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using TranspoLink
+@using TranspoLink.Models
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
